--- a/app/src/main/res/layout/fragment_invitation_info.xml
+++ b/app/src/main/res/layout/fragment_invitation_info.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="model"
-            type="com.mashup.patatoinvitation.presentation.invitationtitle.InvitationTitleViewModel" />
+            type="com.mashup.patatoinvitation.presentation.invitationinfo.InvitationInfoViewModel" />
     </data>
 
     <LinearLayout
@@ -16,37 +16,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/white_two">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/btnInvitationTitleBack"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:paddingStart="0dp"
-                    android:paddingEnd="6dp"
-                    android:src="@drawable/ic_arrow_back" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:fontFamily="sans-serif-medium"
-                    android:text="@string/input_invitation"
-                    android:textColor="@color/black"
-                    android:textSize="20dp" />
-            </LinearLayout>
-        </androidx.appcompat.widget.Toolbar>
 
         <ScrollView
             android:layout_width="match_parent"
