--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -84,7 +84,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:layout_marginTop="16dp"
-                    android:onClick="@{() -> model.listener.goToInvitationTitle()}"
+                    android:onClick="@{() -> model.listener.goToInvitationInfo()}"
                     bind:isChecked="@{model.isTitle()}"
                     bind:title="@{@string/input_invitation}" />
 
