--- a/app/src/main/res/layout/layout_common_lemon_button.xml
+++ b/app/src/main/res/layout/layout_common_lemon_button.xml
@@ -16,6 +16,7 @@
         android:background="@color/lemon">
 
         <TextView
+            android:id="@+id/tvCommonLemonButtonTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
