--- a/app/src/main/res/menu/appbar.xml
+++ b/app/src/main/res/menu/appbar.xml
@@ -3,7 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_settings"
-        android:title="Settings"
+        android:id="@+id/action_version"
+        android:title="버전정보"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_landing"
+        android:title="개발자정보"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_feedback"
+        android:title="문의하기"
         app:showAsAction="never" />
 </menu>
