--- a/app/src/main/res/layout/item_search_location.xml
+++ b/app/src/main/res/layout/item_search_location.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -60,7 +59,7 @@
             android:layout_marginTop="4dp"
             android:background="@drawable/background_load_address_text"
             android:padding="3dp"
-            android:text="@string/input_address_road_title"
+            android:text="@string/input_location_road_title"
             android:textColor="@color/greyish"
             android:textSize="10sp"
             android:visibility='@{model.addressName.equals("")? View.GONE : View.VISIBLE}'
