--- a/app/src/main/res/layout/fragment_invitation_info.xml
+++ b/app/src/main/res/layout/fragment_invitation_info.xml
@@ -6,7 +6,11 @@
     <data>
 
         <variable
-            name="model"
+            name="mainModel"
+            type="com.mashup.nawainvitation.presentation.main.MainViewModel" />
+
+        <variable
+            name="infoModel"
             type="com.mashup.nawainvitation.presentation.invitationinfo.InvitationInfoViewModel" />
     </data>
 
@@ -61,7 +65,7 @@
                         android:textColor="@color/black"
                         android:textSize="16dp"
                         android:hint="@string/input_invitation_title"
-                        android:text="@={model.title}" />
+                        android:text="@={infoModel.title}" />
 
                     <View
                         android:layout_width="match_parent"
@@ -80,6 +84,7 @@
                     app:cardCornerRadius="16dp">
 
                     <EditText
+                        android:id="@+id/etInvitationContents"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="40dp"
@@ -89,8 +94,9 @@
                         android:textColor="@color/black"
                         android:gravity="top"
                         android:textSize="16dp"
+                        android:maxLength="@{infoModel.limitCount}"
                         android:padding="16dp"
-                        android:text="@={model.description}" />
+                        android:text="@={infoModel.contents}" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -103,23 +109,26 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@{@string/format_invitation_description_count(model.descriptionCount)}"
+                            android:text="@{@string/format_invitation_description_count(infoModel.contentsCount)}"
                             tools:text="0자" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text=" / 100자" />
+                            android:layout_marginStart="4dp"
+                            android:text="@{@string/limit_count_format(infoModel.limitCount)}"
+                            tools:text="/ 100자" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
         </ScrollView>
 
         <com.mashup.nawainvitation.custom.LemonButton
+            android:id="@+id/btnInvitationInfoSave"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:onClick="@{() -> model.saveData()}"
-            android:enabled="true"
+            android:enabled="@{infoModel.enableBtn}"
+            android:onClick="@{() -> infoModel.saveData()}"
             android:text="@string/input_complete"
             android:textSize="24dp" />
     </LinearLayout>
