--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -51,7 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="96dp"
                 android:layout_gravity="center|bottom"
-                bind:setImageUrl="@{model.backgroundUrl}"
+                bind:setImageUrl="@{model.invitations.templateBackgroundImageUrl}"
                 tools:background="@color/white" />
         </FrameLayout>
 
@@ -79,7 +79,6 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
                     android:textSize="16dp"
-                    android:text="@{model.title}"
                     tools:text="난 너가 꼭 와주면 좋겠어💖 와줄꺼지?" />
 
                 <include
