--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -129,7 +129,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:onClick="@{() -> model.listener.goToPreview()}"
-            android:enabled="true"
+            android:enabled="@{model.enableBtn}"
             android:text="@string/complete"
             android:textSize="24dp" />
     </LinearLayout>
