--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -58,7 +58,7 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="270dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="10dp"
@@ -73,7 +73,8 @@
                 android:orientation="vertical"
                 android:paddingStart="16dp"
                 android:paddingTop="16dp"
-                android:paddingEnd="16dp">
+                android:paddingEnd="16dp"
+                android:paddingBottom="40dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -116,7 +117,6 @@
                     android:layout_height="48dp"
                     android:layout_marginTop="16dp"
                     android:onClick="@{() -> model.listener.goToInvitationPhoto()}"
-                    android:visibility="gone"
                     bind:isChecked="@{model.isPhoto()}"
                     bind:title="@{@string/input_photo}" />
             </LinearLayout>
